--- a/nn-app/file_upload/templates/index.block.html
+++ b/nn-app/file_upload/templates/index.block.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %} {% block title %}Login{% endblock %} {% block content %}
-<p>HELLO FUCKING BLOCK WORLD</p>
-<h2>New post</h2>
-    <form method="POST" action="submit/" sclass="post-form">{% csrf_token %}
+<h3>New post</h3>
+    <form method="POST" enctype="multipart/form-data" action="submit/" sclass="post-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
