--- a/nn-app/file_upload/templates/results.block.html
+++ b/nn-app/file_upload/templates/results.block.html
@@ -1,9 +1,16 @@
 {% extends 'base.html' %} {% block title %}NN Analysis Results{% endblock %} {% block content %} {% load static %}
 
-<object data="../Rplots.pdf" type="application/pdf" width="100%" height="100%">
-  <p>It appears you don't have a PDF plugin for this browser.
-  No biggie... you can <a href="../Rplots.pdf">click here to
-  download the PDF file.</a></p>
+<object
+  data="{% static 'Rplots.pdf' %}"
+  type="application/pdf"
+  width="100%"
+  height="100%"
+>
+  <p>
+    It appears you don't have a PDF plugin for this browser. No biggie... you
+    can
+    <a href="{% static 'Rplots.pdf' %}">click here to download the PDF file.</a>
+  </p>
 </object>
 
 {% endblock %}
