--- a/nn-app/file_upload/templates/index.block.html
+++ b/nn-app/file_upload/templates/index.block.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %} {% block title %}Upload{% endblock %} {% block content %}
 <div id="file-upload">
-        <h3>New post</h3>
+        <h3>Upload File</h3>
 
         <form method="POST" enctype="multipart/form-data" action="submit/" sclass="post-form">{% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="save btn btn-default">Save</button>
+            <button type="submit" class="save btn btn-default">Upload</button>
         </form>
 </div>
 
