--- a/nn-app/file_upload/templates/index.block.html
+++ b/nn-app/file_upload/templates/index.block.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block title %}Upload{% endblock %} {% block content %}
-<div id="file-upload">
+<div id="file-upload" class="contentdiv">
         <h3>Upload File</h3>
 
         <form method="POST" enctype="multipart/form-data" action="submit/" sclass="post-form">{% csrf_token %}
