added back navigation to homepage

--- a/nn-app/file_upload/templates/base.html
+++ b/nn-app/file_upload/templates/base.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <h1>NN Analysis GUI</h1>
+    <h1><a href="/">NN Analysis GUI</a></h1>
     <div class="container" id="content">
       {% block content %} {% endblock %}
     </div>
