hoping to reconcile issues that broke this

--- a/nn-app/file_upload/templates/results.block.html
+++ b/nn-app/file_upload/templates/results.block.html
@@ -8,7 +8,7 @@
   <div id=legendcontents">
     <h4>Page 1</h4>
       <p>Black lines indicate positive weight<br>
-        Gray lines indicate negative weigt<br>
+        Gray lines indicate negative weight<br>
         Thicker Lines = more impact on output</p>
     <h4>Subsequent Pages</h4>
       <p>Each page is a histogram showing how all the inputs influence one of the outputs.</p>
